objects/AUM_in_Manulife__c/AUM_in_Manulife__c.object-meta.xml
<CustomObject>
    <description>WAMCRM : store AUM in Manulife from TA System</description>
    <label>Distributor AUM in Manulife</label>
    <nameField>
        <displayFormat>AUM-{000000}</displayFormat>
        <label>AUM in Manulife Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor AUM in Manulife</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>