objects/AUM_in_Manulife__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>WAMCRM : Account related to the AUM</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AUM_in_Manulife</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>