objects/AUM_in_Manulife__c/fields/AUM_in_Manulife__c.field-meta.xml
<CustomField>
    <fullName>AUM_in_Manulife__c</fullName>
    <description>WAMCRM : AUM in Manulife from TA System</description>
    <label>AUM in Manulife</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>