objects/AUM_in_Manulife__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>WAMCRM : External ID for TA System</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>