objects/AUM_in_Manulife__c/fields/Gross_Sales_in_Manulife__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sales_in_Manulife__c</fullName>
    <description>WAMCRM : Gross Sales in Manulife from TA System</description>
    <label>Gross Sales in Manulife</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>