objects/AUM_in_Manulife__c/fields/Net_Sales_in_Manulife__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales_in_Manulife__c</fullName>
    <description>WAMCRM : Gross Sales in Manulife from TA System</description>
    <label>Net Sales in Manulife</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>