objects/AUM_in_Manulife__c/fields/Record_detail__c.field-meta.xml
<CustomField>
    <fullName>Record_detail__c</fullName>
    <formula>HYPERLINK("/" &amp;Id, "View", "_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record detail</label>
    <type>Text</type>
</CustomField>