objects/AUM_in_Manulife__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <description>WAMCRM: The reporting date of this Record</description>
    <inlineHelpText>Report date specifies the AUM record reported date</inlineHelpText>
    <label>Report Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>