objects/AUM_in_Manulife__c/fields/Share_of_Wallet_Gross_Sales__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet_Gross_Sales__c</fullName>
    <label>Share of Wallet % (Gross Sales)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>