objects/AUM_in_Manulife__c/fields/Share_of_Wallet_Net_Sales__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet_Net_Sales__c</fullName>
    <description>WAMCRM: Calculated %</description>
    <label>Share of Wallet % (Net Sales)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>