objects/AUM_in_Manulife__c/recordTypes/WAM.recordType-meta.xml
<RecordType>
    <fullName>WAM</fullName>
    <active>true</active>
    <description>WAMCRM: Record Type</description>
    <label>WAM</label>
</RecordType>