objects/AUM_in_Manulife__c/validationRules/WAM_validate_report_date.validationRule-meta.xml
<ValidationRule>
    <fullName>WAM_validate_report_date</fullName>
    <active>false</active>
    <description>WAMCRM : Report data cannot be future</description>
    <errorConditionFormula>if ( Report_Date__c &gt; TODAY(), TRUE, FALSE )</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>Report Date cannot be future date</errorMessage>
</ValidationRule>